...
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/themedTransparent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            app:srcCompat="@drawable/main_activity_header" />

        <TextView
...
            android:layout_marginBottom="20dp"
            android:text="Quiz, Score and Rank against other Students"
            android:textAlignment="center"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/themedBlue"
            android:ems="10"
            android:hint="Enter Your Username"
            android:imeOptions="actionDone"
            android:inputType="text|textNoSuggestions" />

        <Button
            android:id="@+id/buttonLogin"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/themedBlue"
            android:text="Login" />
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/rememberCheckBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:buttonTint="@color/themedCheckBox"
                android:text="Remember Me"
                android:textSize="14sp" />
...
