<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="20dp"
    android:layout_marginTop="15dp"
    android:layout_marginRight="20dp"
    android:orientation="vertical"
    tools:context=".activities.DashboardActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingBottom="10dp">

                <TextView
                    android:id="@+id/loggedUserDashHeader"
                    android:layout_width="235dp"
                    android:layout_height="18dp"
                    android:layout_weight="1"
                    android:text="Welcome"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp" />

                <TextView
                    android:id="@+id/logoutLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Logout"
                    android:textAlignment="textEnd" />

            </LinearLayout>

            <android.support.v7.widget.RecyclerView
                android:id="@+id/quizCardList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="100dp">

            </android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_quiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end|bottom"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        app:backgroundTint="@color/themedBlue"
        app:srcCompat="@drawable/ic_add_black_24dp" />

</RelativeLayout>

