<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegisterActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="35dp"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/registerBackButton"
            android:layout_width="45dp"
            android:layout_height="wrap_content"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageView
            android:id="@+id/registrationHeader"
            android:layout_width="match_parent"
            android:layout_height="125dp"
            app:srcCompat="@drawable/registration_header" />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/registerButton"
            android:ems="10"
            android:hint="Username"
            android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890"
            android:maxLength="20"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/registerButton"
            android:ems="10"
            android:hint="Email Address"
            android:inputType="textEmailAddress" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/firstNameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/registerButton"
                android:ems="10"
                android:hint="First"
                android:maxLength="20"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/lastNameTextEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/registerButton"
                android:ems="10"
                android:hint="Last"
                android:maxLength="20"
                android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
                android:inputType="textPersonName" />

        </LinearLayout>

        <Spinner
            android:id="@+id/majorSpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp" />

        <Spinner
            android:id="@+id/senioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginBottom="8dp" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/registerButton"
            android:radius="10dp"
            android:text="Register"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/textButton" />

    </LinearLayout>
</RelativeLayout>